--- a/TankWar2.vcxproj.filters
+++ b/TankWar2.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="gameconsts.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="MoveType.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
