--- a/TankWar2.vcxproj.filters
+++ b/TankWar2.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="MoveType.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="IGameItem.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
