--- a/TankWar2.vcxproj.filters
+++ b/TankWar2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="GameControl.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Shot.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tank.h">
@@ -39,6 +42,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="GameControl.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Shot.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
