--- a/TankWar2.vcxproj
+++ b/TankWar2.vcxproj
@@ -139,16 +139,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameControl.cpp" />
+    <ClCompile Include="GameField.cpp" />
     <ClCompile Include="Shot.cpp" />
     <ClCompile Include="Tank.cpp" />
     <ClCompile Include="TankWar2.cpp" />
     <ClCompile Include="Walls.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameField.h" />
     <ClInclude Include="Shot.h" />
     <ClInclude Include="gameconsts.h" />
-    <ClInclude Include="GameControl.h" />
     <ClInclude Include="IGameItem.h" />
     <ClInclude Include="MoveType.h" />
     <ClInclude Include="Tank.h" />
